src/common/02-group-d/type.less
/**
 * variables
 */

// this is the base size for everything we do
@type-pica-font-size: 16px;

/**
 * styles
 */
.type-cannon {
    font-size: 40px;
    line-height: 48px;
    margin-top: 24px;
    margin-bottom: @type-pica-font-size;
}

.type-trafalgar {
    font-size: 32px;
    line-height: 32px;
    margin-top: 24px;
    margin-bottom: @type-pica-font-size;
}

.type-doublepica {
    font-size: 24px;
    line-height: 24px;
    margin-top: 24px;
    margin-bottom: @type-pica-font-size;
}

.type-greatprimer {
    font-size: 20px;
    line-height: 20px;
    margin-bottom: @type-pica-font-size;
}

.type-pica {
    font-size: @type-pica-font-size;
    line-height: 22px;
    margin-bottom: @type-pica-font-size;
}

.type-longprimer {
    font-size: 14px;
    line-height: 18px;
    margin-bottom: @type-pica-font-size;
}

.type-brevier {
    font-size: 13px;
    line-height: 16px;
    margin-bottom: @type-pica-font-size;
}

.type-minion {
    font-size: 12px;
    line-height: 16px;
    margin-bottom: @type-pica-font-size;
}

